<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inertial_sense_ros</name>
  <version>1.1.1</version>
  <description>
  This package provides a ROS interface to the InertialSense GPS-INS sensor
  </description>
  <maintainer email="devteam@inertialsense.com">IS Dev Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
